drop year encode district

--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -126,7 +126,31 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# encode district\n",
+    "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
+    "\n",
+    "temp = pd.get_dummies(datasetDf[\"district\"], prefix=\"district\", drop_first=True)\n",
+    "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
+    "\n",
+    "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
+    "\n",
+    "del temp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,6 +167,17 @@
     "trainDf = extractYears(datasetDf, 1995, 2015)\n",
     "testDf = extractYears(datasetDf, 2016, 2020)\n",
     "del datasetDf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop year\n",
+    "trainDf = trainDf.drop(columns=[\"year\"])\n",
+    "testDf = testDf.drop(columns=[\"year\"])\n"
    ]
   },
   {
@@ -223,23 +258,6 @@
    "source": [
     "# df = pd.DataFrame()\n",
     "# scaled = scaleColumns(df, ['max_temp'], None, 1)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# encoded = encodeColumns(df, ['max_temp'], None)"
    ]
   },
   {
@@ -354,8 +372,7 @@
     "predictions = model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
     "predictions_nobalance = model_nobalance_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
     "predictions_balanced = balanced_model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "\n"
+    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(testDf.drop(columns=\"downgrade\"))\n"
    ]
   },
   {
@@ -367,7 +384,7 @@
     "print(pd.DataFrame(predictions).value_counts())\n",
     "print(pd.DataFrame(predictions_nobalance).value_counts())\n",
     "print(pd.DataFrame(predictions_balanced).value_counts())\n",
-    "print(pd.DataFrame(predictions_balanced_balanced).value_counts())"
+    "print(pd.DataFrame(predictions_balanced_balanced).value_counts())\n"
    ]
   },
   {
@@ -388,7 +405,8 @@
     "printMetrics(\"sk RF balanced train set\", testDf[\"downgrade\"], predictions)\n",
     "printMetrics(\"sk RF imbalanced train set\", testDf[\"downgrade\"], predictions_nobalance)\n",
     "printMetrics(\"imb RF imbalanced train set\", testDf[\"downgrade\"], predictions_balanced)\n",
-    "printMetrics(\"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced)"
+    "printMetrics(\"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced)\n",
+    "\n"
    ]
   }
  ],
