--- a/src/Models/Boost.ipynb
+++ b/src/Models/Boost.ipynb
@@ -35,11 +35,11 @@
     "    recall_score,\n",
     "    f1_score,\n",
     "    roc_auc_score,\n",
-    "    classification_report\n",
+    "    classification_report,\n",
     ")\n",
     "\n",
-    "sys.path.append('../')\n",
-    "os.chdir('../')\n",
+    "sys.path.append(\"../\")\n",
+    "os.chdir(\"../\")\n",
     "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns\n",
     "from Models.models_ensemble import getBalancedClassifier, getClassifier"
    ]
@@ -52,7 +52,7 @@
    "source": [
     "# unlimited line output\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', 500)"
+    "pd.set_option(\"display.max_rows\", 500)"
    ]
   },
   {
@@ -69,24 +69,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherStationQuery = sq.text(\"\"\"\n",
+    "weatherStationQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_station\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "weatherSatQuery = sq.text(\"\"\"\n",
+    "weatherSatQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_sat\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "ergotPrevYearsAggQuery = sq.text(\"\"\"\n",
+    "ergotPrevYearsAggQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT year, district, \n",
     "    present_prev1, present_prev2, present_prev3,\n",
     "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
     "    from agg_ergot_sample_v2\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "ergotTargetQuery = sq.text(\"\"\"\n",
+    "ergotTargetQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT year, district, downgrade from ergot_sample_feat_eng\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -643,7 +651,9 @@
    "outputs": [],
    "source": [
     "balancer = SMOTEENN(sampling_strategy=0.8, random_state=42)\n",
-    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])"
+    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(\n",
+    "    trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"]\n",
+    ")"
    ]
   },
   {
@@ -749,10 +759,18 @@
     "MINSAMPLELEAF = 4\n",
     "\n",
     "gradient_boosting_model = GradientBoostingClassifier(\n",
-    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbose=1, n_iter_no_change=200\n",
+    "    n_estimators=ESTIMATORS,\n",
+    "    random_state=42,\n",
+    "    max_depth=DEPTH,\n",
+    "    verbose=1,\n",
+    "    n_iter_no_change=200,\n",
     ")\n",
     "balanced_gradient_boosting_model = GradientBoostingClassifier(\n",
-    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbose=1, n_iter_no_change=200\n",
+    "    n_estimators=ESTIMATORS,\n",
+    "    random_state=42,\n",
+    "    max_depth=DEPTH,\n",
+    "    verbose=1,\n",
+    "    n_iter_no_change=200,\n",
     ")\n",
     "rusboost_model = RUSBoostClassifier(\n",
     "    n_estimators=ESTIMATORS, random_state=42, sampling_strategy=0.5\n",
@@ -765,8 +783,7 @@
     ")\n",
     "balanced_xgboost_model = XGBClassifier(\n",
     "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbosity=1, n_jobs=CORES\n",
-    ")\n",
-    "    "
+    ")"
    ]
   },
   {
@@ -790,12 +807,39 @@
       "         9           0.1381           44.67m\n",
       "        10           0.1372           44.43m\n",
       "        20           0.1328           41.74m\n",
-      "        30           0.1316           40.14m\n"
+      "        30           0.1316           40.14m\n",
+      "        40           0.1311           38.49m\n",
+      "        50           0.1310           36.92m\n",
+      "        60           0.1309           35.50m\n",
+      "        70           0.1309           33.99m\n",
+      "        80           0.1309           32.30m\n",
+      "        90           0.1309           30.76m\n",
+      "       100           0.1309           29.29m\n",
+      "       200           0.1309           22.28m\n",
+      "      Iter       Train Loss   Remaining Time \n",
+      "         1           0.6578          147.85m\n",
+      "         2           0.5552          150.95m\n",
+      "         3           0.4805          154.23m\n",
+      "         4           0.4218          156.10m\n",
+      "         5           0.3738          153.93m\n",
+      "         6           0.3335          152.66m\n",
+      "         7           0.2992          151.91m\n",
+      "         8           0.2696          151.94m\n",
+      "         9           0.2439          153.77m\n",
+      "        10           0.2215          153.32m\n",
+      "        20           0.0989          148.87m\n",
+      "        30           0.0580          144.92m\n",
+      "        40           0.0434          130.77m\n",
+      "        50           0.0381          116.00m\n",
+      "        60           0.0362          105.45m\n",
+      "        70           0.0355           97.25m\n",
+      "        80           0.0352           90.64m\n",
+      "        90           0.0351           85.06m\n",
+      "       100           0.0351           80.16m\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "gradient_boosting_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "balanced_gradient_boosting_model.fit(balancedTrainDfX, balancedTrainDfY)"
    ]
@@ -815,7 +859,7 @@
    "outputs": [],
    "source": [
     "rusboost_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
-    "balanced_rusboost_model.fit(balancedTrainDfX, balancedTrainDfY)\n"
+    "balanced_rusboost_model.fit(balancedTrainDfX, balancedTrainDfY)"
    ]
   },
   {
@@ -861,15 +905,22 @@
     }
    ],
    "source": [
-    "\n",
     "# get predictions\n",
     "\n",
-    "predictions_gradient_boosting = gradient_boosting_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_gradient_boosting = balanced_gradient_boosting_model.predict(testDf.drop(columns=\"downgrade\"))\n",
+    "predictions_gradient_boosting = gradient_boosting_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")\n",
+    "predictions_balanced_gradient_boosting = balanced_gradient_boosting_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")\n",
     "predictions_rusboost = rusboost_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_rusboost = balanced_rusboost_model.predict(testDf.drop(columns=\"downgrade\"))\n",
+    "predictions_balanced_rusboost = balanced_rusboost_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")\n",
     "predictions_xgboost = xgboost_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_xgboost = balanced_xgboost_model.predict(testDf.drop(columns=\"downgrade\"))\n"
+    "predictions_balanced_xgboost = balanced_xgboost_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")"
    ]
   },
   {
@@ -878,7 +929,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "print(pd.DataFrame(predictions_gradient_boosting).value_counts())\n",
     "print(pd.DataFrame(predictions_balanced_gradient_boosting).value_counts())\n",
     "print(pd.DataFrame(predictions_rusboost).value_counts())\n",
@@ -893,14 +943,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# get accuracy precision recall f1 roc_auc\n",
-    "printMetrics(\"sk GB imbalanced train set\", testDf[\"downgrade\"], predictions_gradient_boosting)\n",
-    "printMetrics(\"imb GB balanced train set\", testDf[\"downgrade\"], predictions_balanced_gradient_boosting)\n",
+    "printMetrics(\n",
+    "    \"sk GB imbalanced train set\", testDf[\"downgrade\"], predictions_gradient_boosting\n",
+    ")\n",
+    "printMetrics(\n",
+    "    \"imb GB balanced train set\",\n",
+    "    testDf[\"downgrade\"],\n",
+    "    predictions_balanced_gradient_boosting,\n",
+    ")\n",
     "printMetrics(\"sk RUS imbalanced train set\", testDf[\"downgrade\"], predictions_rusboost)\n",
-    "printMetrics(\"imb RUS balanced train set\", testDf[\"downgrade\"], predictions_balanced_rusboost)\n",
+    "printMetrics(\n",
+    "    \"imb RUS balanced train set\", testDf[\"downgrade\"], predictions_balanced_rusboost\n",
+    ")\n",
     "printMetrics(\"sk XGB imbalanced train set\", testDf[\"downgrade\"], predictions_xgboost)\n",
-    "printMetrics(\"imb XGB balanced train set\", testDf[\"downgrade\"], predictions_balanced_xgboost)"
+    "printMetrics(\n",
+    "    \"imb XGB balanced train set\", testDf[\"downgrade\"], predictions_balanced_xgboost\n",
+    ")"
    ]
   },
   {
