--- a/src/Models/IMBClassifiers.ipynb
+++ b/src/Models/IMBClassifiers.ipynb
@@ -32,11 +32,11 @@
     "    recall_score,\n",
     "    f1_score,\n",
     "    roc_auc_score,\n",
-    "    classification_report\n",
+    "    classification_report,\n",
     ")\n",
     "\n",
-    "sys.path.append('../')\n",
-    "os.chdir('../')\n",
+    "sys.path.append(\"../\")\n",
+    "os.chdir(\"../\")\n",
     "from ModelBuilderMethods import getConn, extractYears, scaleColumns, encodeColumns\n",
     "from Models.models_ensemble import getBalancedClassifier, getClassifier"
    ]
@@ -49,7 +49,7 @@
    "source": [
     "# unlimited line output\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', 500)"
+    "pd.set_option(\"display.max_rows\", 500)"
    ]
   },
   {
@@ -66,24 +66,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherStationQuery = sq.text(\"\"\"\n",
+    "weatherStationQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_station\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "weatherSatQuery = sq.text(\"\"\"\n",
+    "weatherSatQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_sat\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "ergotPrevYearsAggQuery = sq.text(\"\"\"\n",
+    "ergotPrevYearsAggQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT year, district, \n",
     "    present_prev1, present_prev2, present_prev3,\n",
     "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
     "    from agg_ergot_sample_v2\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "\n",
-    "ergotTargetQuery = sq.text(\"\"\"\n",
+    "ergotTargetQuery = sq.text(\n",
+    "    \"\"\"\n",
     "    SELECT year, district, downgrade from ergot_sample_feat_eng\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -182,7 +190,9 @@
    "outputs": [],
    "source": [
     "balancer = SMOTEENN(sampling_strategy=0.8, random_state=42)\n",
-    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])"
+    "balancedTrainDfX, balancedTrainDfY = balancer.fit_resample(\n",
+    "    trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"]\n",
+    ")"
    ]
   },
   {
@@ -309,10 +319,18 @@
     "    min_samples_leaf=MINSAMPLELEAF,\n",
     ")\n",
     "gradient_boosting_model = GradientBoostingClassifier(\n",
-    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbose=1, n_iter_no_change=100\n",
+    "    n_estimators=ESTIMATORS,\n",
+    "    random_state=42,\n",
+    "    max_depth=DEPTH,\n",
+    "    verbose=1,\n",
+    "    n_iter_no_change=100,\n",
     ")\n",
     "balanced_gradient_boosting_model = GradientBoostingClassifier(\n",
-    "    n_estimators=ESTIMATORS, random_state=42, max_depth=DEPTH, verbose=1, n_iter_no_change=100\n",
+    "    n_estimators=ESTIMATORS,\n",
+    "    random_state=42,\n",
+    "    max_depth=DEPTH,\n",
+    "    verbose=1,\n",
+    "    n_iter_no_change=100,\n",
     ")"
    ]
   },
@@ -354,14 +372,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# get predictions\n",
     "predictions = model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
     "predictions_nobalance = model_nobalance_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
     "predictions_balanced = balanced_model_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_gradient_boosting = gradient_boosting_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_gradient_boosting = balanced_gradient_boosting_model.predict(testDf.drop(columns=\"downgrade\"))\n"
+    "predictions_balanced_balanced = balanced_model_balanced_rf.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")\n",
+    "predictions_gradient_boosting = gradient_boosting_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")\n",
+    "predictions_balanced_gradient_boosting = balanced_gradient_boosting_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\")\n",
+    ")"
    ]
   },
   {
@@ -384,10 +407,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# get accuracy precision recall f1 roc_auc\n",
-    "printMetrics(\"sk GB imbalanced train set\", testDf[\"downgrade\"], predictions_gradient_boosting)\n",
-    "printMetrics(\"imb GB balanced train set\", testDf[\"downgrade\"], predictions_balanced_gradient_boosting)"
+    "printMetrics(\n",
+    "    \"sk GB imbalanced train set\", testDf[\"downgrade\"], predictions_gradient_boosting\n",
+    ")\n",
+    "printMetrics(\n",
+    "    \"imb GB balanced train set\",\n",
+    "    testDf[\"downgrade\"],\n",
+    "    predictions_balanced_gradient_boosting,\n",
+    ")"
    ]
   },
   {
@@ -404,11 +432,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "printMetrics(\"sk RF balanced train set\", testDf[\"downgrade\"], predictions)\n",
     "printMetrics(\"sk RF imbalanced train set\", testDf[\"downgrade\"], predictions_nobalance)\n",
     "printMetrics(\"imb RF imbalanced train set\", testDf[\"downgrade\"], predictions_balanced)\n",
-    "printMetrics(\"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced)"
+    "printMetrics(\n",
+    "    \"imb RF balanced train set\", testDf[\"downgrade\"], predictions_balanced_balanced\n",
+    ")"
    ]
   }
  ],
