added documentation for the scraping process (dly, hly and processor)

--- a/src/WeatherStation/stationDataVisualization.ipynb
+++ b/src/WeatherStation/stationDataVisualization.ipynb
@@ -644,7 +644,7 @@
     "sns.set_theme(style=\"white\")\n",
     "\n",
     "# Generate a mask for the upper triangle\n",
-    "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
+    "mask = np.triu(np.ones_like(dly_corr, dtype=bool))\n",
     "\n",
     "# Set up the matplotlib figure\n",
     "f, ax = plt.subplots(figsize=(11, 9))\n",
