Next up is the import geo script

--- a/src/Unused/aggregateDly.ipynb
+++ b/src/Unused/aggregateDly.ipynb
@@ -1,16 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# aggregateDly.ipynb\n",
+    "After loading the [daily weather stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly) and the [daily weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hld_station_data) the following class can be used to calculate the minimum, mean and maximum of all attributes per district\n",
+    "\n",
+    "##### Output:\n",
+    "An excel document with the expected output columns (saves as specified by pathToSave i.e datasets uses datasets/data/)\n",
+    "\n",
+    "##### Remarks: \n",
+    "- As weeks change per year, the weekly aggregation uses the year of 2001 (not a leap year)\n",
+    "- Although a tablename is assigned there is a column limit in postgres that hinders this option"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dotenv import load_dotenv\n",
     "import sqlalchemy as sq\n",
     "import geopandas as gpd  # type: ignore\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from dotenv import load_dotenv\n",
     "import os, sys, calendar\n",
     "\n",
     "sys.path.append(\"../\")\n",
@@ -23,14 +38,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MIN_MONTH = 1\n",
-    "MAX_MONTH = 12\n",
+    "DLY_STATIONS = \"stations_dly\"  # table that contains the hourly stations\n",
     "\n",
-    "MIN_YEAR = 1995\n",
-    "MAX_YEAR = 2022\n",
-    "TABLENAME = \"agg_dly_weather\"\n",
+    "AB_DLY_TABLE = \"ab_dly_station_data\"  # table that contains Albertas data\n",
+    "MB_DLY_TABLE = \"mb_dly_station_data\"  # table that contains Manitobas data\n",
+    "SK_DLY_TABLE = \"sk_dly_station_data\"  # table that contains Saskatchewans data\n",
     "\n",
-    "load_dotenv()\n",
+    "MIN_MONTH = 1  # The month to start aggregating on\n",
+    "MAX_MONTH = 12  # The month to finish aggregating on\n",
+    "\n",
+    "MIN_YEAR = 1995  # The year to start aggregating on\n",
+    "MAX_YEAR = 2022  # The year to finish aggregating on\n",
+    "TABLENAME = \"agg_dly_weather\"  # Name of the table where results are stored\n",
+    "\n",
+    "\n",
+    "# Load the database connection environment variables located in the docker folder\n",
+    "load_dotenv(\"../docker/.env\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
@@ -44,15 +67,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
+    "\n",
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
+    "\n",
+    "    weatherData = pullWeatherData(conn)\n",
+    "    stationData = pullStationData(conn)\n",
+    "\n",
+    "    # merge both the weather station data and the station data together\n",
+    "    df = weatherData.merge(stationData, on=\"station_id\")\n",
+    "\n",
+    "    agg_df = aggregateDlyData(df)\n",
+    "    dates = getDates()\n",
+    "    listForDF = reshapeDlyData(dates, agg_df, stationData)\n",
+    "    final_df = pd.DataFrame(listForDF)\n",
+    "\n",
+    "    try:\n",
+    "        final_df.to_csv(\n",
+    "            path_or_buf=\"data/aggregatedDly.csv\",\n",
+    "            sep=\",\",\n",
+    "            columns=final_df.columns.tolist(),\n",
+    "        )\n",
+    "        # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
+    "    except Exception as e:\n",
+    "        print(\"[ERROR]\")\n",
+    "        print(e)\n",
+    "\n",
+    "    db.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def pullWeatherData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    # pulling weather station data from the database\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Loads the weather station data per province from the weather station data tables\n",
+    "\n",
+    "    Tables:\n",
+    "    - [ab_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_dly_station_data)\n",
+    "    - [mb_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_dly_station_data)\n",
+    "    - [sk_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_dly_station_data)\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Create the weather station data SQL query\n",
+    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "    \"\"\"\n",
     "    weatherDataQuery = sq.text(\n",
-    "        \"\"\"\n",
-    "        SELECT * FROM public.ab_dly_station_data\n",
+    "        f\"\"\"\n",
+    "        SELECT * FROM public.{AB_DLY_TABLE}\n",
     "        UNION\n",
-    "        SELECT * FROM public.mb_dly_station_data\n",
+    "        SELECT * FROM public.{MB_DLY_TABLE}\n",
     "        UNION\n",
-    "        SELECT * FROM public.sk_dly_station_data;\n",
+    "        SELECT * FROM public.{SK_DLY_TABLE};\n",
     "        \"\"\"\n",
     "    )\n",
     "\n",
@@ -66,10 +145,23 @@
    "outputs": [],
    "source": [
     "def pullStationData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    # pulling station data from the database\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Loads the weather stations from the daily weather station table\n",
+    "\n",
+    "    Tables:\n",
+    "    - [stations_dly](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly)\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Create the weather station SQL query\n",
+    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "    - [Cast district into an integer](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html)\n",
+    "\n",
+    "    Remarks: if district is not casted, future methods will throw errors\n",
+    "    \"\"\"\n",
     "    stationDataQuery = sq.text(\n",
-    "        \"\"\"\n",
-    "        SELECT station_id, district FROM public.stations_dly\n",
+    "        f\"\"\"\n",
+    "        SELECT station_id, district FROM public.{DLY_STATIONS}\n",
     "        WHERE district IS NOT NULL;\n",
     "        \"\"\"\n",
     "    )\n",
@@ -87,7 +179,14 @@
    "outputs": [],
    "source": [
     "def aggregateDlyData(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # aggregate the values in the dataframe by date and district\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Aggregate the daily weather station data by district and date\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Aggregate the columns by district and date\n",
+    "    - Name the columns into the final DataFrame\n",
+    "    \"\"\"\n",
     "    agg_df = (\n",
     "        df.groupby([\"district\", \"date\"])\n",
     "        .agg(\n",
@@ -210,50 +309,6 @@
     "            listForDF.append(currData)\n",
     "\n",
     "    return listForDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    if (\n",
-    "        PG_DB is None\n",
-    "        or PG_ADDR is None\n",
-    "        or PG_PORT is None\n",
-    "        or PG_USER is None\n",
-    "        or PG_PW is None\n",
-    "    ):\n",
-    "        raise ValueError(\"Environment variables not set\")\n",
-    "\n",
-    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "    conn = db.connect()\n",
-    "\n",
-    "    weatherData = pullWeatherData(conn)\n",
-    "    stationData = pullStationData(conn)\n",
-    "\n",
-    "    # merge both the weather station data and the station data together\n",
-    "    df = weatherData.merge(stationData, on=\"station_id\")\n",
-    "\n",
-    "    agg_df = aggregateDlyData(df)\n",
-    "    dates = getDates()\n",
-    "    listForDF = reshapeDlyData(dates, agg_df, stationData)\n",
-    "    final_df = pd.DataFrame(listForDF)\n",
-    "\n",
-    "    try:\n",
-    "        final_df.to_csv(\n",
-    "            path_or_buf=\"data/aggregatedDly.csv\",\n",
-    "            sep=\",\",\n",
-    "            columns=final_df.columns.tolist(),\n",
-    "        )\n",
-    "        # final_df.to_sql(TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False)\n",
-    "    except Exception as e:\n",
-    "        print(\"[ERROR]\")\n",
-    "        print(e)\n",
-    "\n",
-    "    db.cleanup()"
    ]
   },
   {
