--- a/src/WeatherStation/CombineProvinceData.ipynb
+++ b/src/WeatherStation/CombineProvinceData.ipynb
@@ -1,17 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# combineProvinceData.ipynb\n",
+    "After loading the [daily weather stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly), [hourly weather stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_hly), [daily weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_dly_station_data) and the [hourly weather station data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hly_station_data) the following class can be used to calculate the minimum, mean and maximum of all attributes per district\n",
+    "\n",
+    "##### Output:\n",
+    "- [agg_weather_combined](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#agg_weather_combined)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy as sq\n",
-    "import geopandas as gpd  # type: ignore\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from dotenv import load_dotenv\n",
-    "import os, sys, calendar\n",
+    "import sqlalchemy as sq\n",
+    "import pandas as pd\n",
+    "import os, sys\n",
     "\n",
     "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
@@ -23,21 +32,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "DLY_STATIONS = \"stations_dly\"  # table that contains the hourly stations\n",
+    "HLY_STATIONS = \"stations_hly\"  # table that contains the hourly stations\n",
+    "\n",
+    "AB_DLY_TABLE = \"ab_dly_station_data\"  # table that contains Albertas data\n",
+    "MB_DLY_TABLE = \"mb_dly_station_data\"  # table that contains Manitobas data\n",
+    "SK_DLY_TABLE = \"sk_dly_station_data\"  # table that contains Saskatchewans data\n",
+    "\n",
+    "AB_HLY_TABLE = \"ab_hly_station_data\"  # table that contains Albertas data\n",
+    "MB_HLY_TABLE = \"mb_hly_station_data\"  # table that contains Manitobas data\n",
+    "SK_HLY_TABLE = \"sk_hly_station_data\"  # table that contains Saskatchewans data\n",
+    "\n",
+    "TABLENAME = \"agg_weather_combined\"  # The name of the table that will hold the results\n",
+    "\n",
+    "\n",
+    "# Load the database connection environment variables located in the docker folder\n",
+    "load_dotenv(\"../docker/.env\")\n",
     "PG_DB = os.getenv(\"POSTGRES_DB\")\n",
     "PG_ADDR = os.getenv(\"POSTGRES_ADDR\")\n",
     "PG_PORT = os.getenv(\"POSTGRES_PORT\")\n",
     "PG_USER = os.getenv(\"POSTGRES_USER\")\n",
-    "PG_PW = os.getenv(\"POSTGRES_PW\")\n",
+    "PG_PW = os.getenv(\"POSTGRES_PW\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    if (\n",
+    "        PG_DB is None\n",
+    "        or PG_ADDR is None\n",
+    "        or PG_PORT is None\n",
+    "        or PG_USER is None\n",
+    "        or PG_PW is None\n",
+    "    ):\n",
+    "        raise ValueError(\"Environment variables not set\")\n",
     "\n",
-    "if (\n",
-    "    PG_DB is None\n",
-    "    or PG_ADDR is None\n",
-    "    or PG_PORT is None\n",
-    "    or PG_USER is None\n",
-    "    or PG_PW is None\n",
-    "):\n",
-    "    raise ValueError(\"Environment variables not set\")"
+    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
+    "    conn = db.connect()\n",
+    "\n",
+    "    weatherDataHly = pullHlyWeatherData(conn)\n",
+    "    weatherDataDly = pullDlyWeatherData(conn)\n",
+    "    stationData = pullStationData(conn)\n",
+    "\n",
+    "    # merge both the weather station data and the station data together\n",
+    "    dfHly = weatherDataHly.merge(stationData, on=\"station_id\")\n",
+    "    dfDly = weatherDataDly.merge(stationData, on=\"station_id\")\n",
+    "\n",
+    "    # drop station_id column\n",
+    "    dfHly = dfHly.drop(columns=[\"station_id\"])\n",
+    "    dfDly = dfDly.drop(columns=[\"station_id\"])\n",
+    "\n",
+    "    agg_dfHly = aggregateHlyData(dfHly)\n",
+    "    agg_dfDly = aggregateDlyData(dfDly)\n",
+    "\n",
+    "    # merge on year month day district\n",
+    "    dfCombined = agg_dfHly.merge(agg_dfDly, on=[\"year\", \"month\", \"day\", \"district\"])\n",
+    "\n",
+    "    try:\n",
+    "        dfCombined.to_sql(\n",
+    "            TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(\"An error occurred while writing to the database {}\".format(e))\n",
+    "        raise e\n",
+    "\n",
+    "    db.cleanup()"
    ]
   },
   {
@@ -47,14 +110,26 @@
    "outputs": [],
    "source": [
     "def pullHlyWeatherData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    # pulling weather station data from the database\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Loads the weather station data per province from the weather station data tables\n",
+    "\n",
+    "    Tables:\n",
+    "    - [ab_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_hly_station_data)\n",
+    "    - [mb_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_hly_station_data)\n",
+    "    - [sk_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_hly_station_data)\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Create the weather station data SQL query\n",
+    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "    \"\"\"\n",
     "    weatherDataQuery = sq.text(\n",
-    "        \"\"\"\n",
-    "        SELECT * FROM public.ab_hly_station_data\n",
+    "        f\"\"\"\n",
+    "        SELECT * FROM public.{AB_HLY_TABLE}\n",
     "        UNION\n",
-    "        SELECT * FROM public.mb_hly_station_data\n",
+    "        SELECT * FROM public.{MB_HLY_TABLE}\n",
     "        UNION\n",
-    "        SELECT * FROM public.sk_hly_station_data;\n",
+    "        SELECT * FROM public.{SK_HLY_TABLE};\n",
     "        \"\"\"\n",
     "    )\n",
     "\n",
@@ -68,14 +143,26 @@
    "outputs": [],
    "source": [
     "def pullDlyWeatherData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    # pulling weather station data from the database\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Loads the weather station data per province from the weather station data tables\n",
+    "\n",
+    "    Tables:\n",
+    "    - [ab_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ab_dly_station_data)\n",
+    "    - [mb_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#mb_dly_station_data)\n",
+    "    - [sk_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#sk_dly_station_data)\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Create the weather station data SQL query\n",
+    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "    \"\"\"\n",
     "    weatherDataQuery = sq.text(\n",
-    "        \"\"\"\n",
-    "        SELECT * FROM public.ab_dly_station_data\n",
+    "        f\"\"\"\n",
+    "        SELECT * FROM public.{AB_DLY_TABLE}\n",
     "        UNION\n",
-    "        SELECT * FROM public.mb_dly_station_data\n",
+    "        SELECT * FROM public.{MB_DLY_TABLE}\n",
     "        UNION\n",
-    "        SELECT * FROM public.sk_dly_station_data;\n",
+    "        SELECT * FROM public.{SK_DLY_TABLE};\n",
     "        \"\"\"\n",
     "    )\n",
     "\n",
@@ -89,7 +176,14 @@
    "outputs": [],
    "source": [
     "def aggregateHlyData(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # aggregate the values in the dataframe by date and district\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Aggregate the hourly weather station data by district, year, month and day\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Aggregate the columns by district, year, month and day\n",
+    "    - Name the columns into the final DataFrame\n",
+    "    \"\"\"\n",
     "    agg_df = (\n",
     "        df.groupby([\"district\", \"year\", \"month\", \"day\"])\n",
     "        .agg(\n",
@@ -157,7 +251,14 @@
    "outputs": [],
    "source": [
     "def aggregateDlyData(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # aggregate the values in the dataframe by date and district\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Aggregate the daily weather station data by district and date\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Aggregate the columns by district and date\n",
+    "    - Name the columns into the final DataFrame\n",
+    "    \"\"\"\n",
     "    agg_df = (\n",
     "        df.groupby([\"district\", \"year\", \"month\", \"day\"])\n",
     "        .agg(\n",
@@ -207,10 +308,23 @@
    "outputs": [],
    "source": [
     "def pullStationData(conn: sq.engine.Connection) -> pd.DataFrame:\n",
-    "    # pulling station data from the database\n",
+    "    \"\"\"\n",
+    "    Purpose:\n",
+    "    Loads the weather stations from the daily weather station table\n",
+    "\n",
+    "    Tables:\n",
+    "    - [stations_dly](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#stations_dly)\n",
+    "\n",
+    "    Psuedocode:\n",
+    "    - Create the weather station SQL query\n",
+    "    - [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html)\n",
+    "    - [Cast district into an integer](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html)\n",
+    "\n",
+    "    Remarks: if district is not casted, future methods will throw errors\n",
+    "    \"\"\"\n",
     "    stationDataQuery = sq.text(\n",
-    "        \"\"\"\n",
-    "        SELECT station_id, district FROM public.stations_dly\n",
+    "        f\"\"\"\n",
+    "        SELECT station_id, district FROM public.{DLY_STATIONS}\n",
     "        WHERE district IS NOT NULL;\n",
     "        \"\"\"\n",
     "    )\n",
@@ -219,47 +333,6 @@
     "    stationData[[\"district\"]] = stationData[[\"district\"]].astype(int)\n",
     "\n",
     "    return stationData"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    TABLENAME = \"agg_weather_combined\"\n",
-    "\n",
-    "    db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
-    "    conn = db.connect()\n",
-    "\n",
-    "    weatherDataHly = pullHlyWeatherData(conn)\n",
-    "    weatherDataDly = pullDlyWeatherData(conn)\n",
-    "    stationData = pullStationData(conn)\n",
-    "\n",
-    "    # merge both the weather station data and the station data together\n",
-    "    dfHly = weatherDataHly.merge(stationData, on=\"station_id\")\n",
-    "    dfDly = weatherDataDly.merge(stationData, on=\"station_id\")\n",
-    "\n",
-    "    # drop station_id column\n",
-    "    dfHly = dfHly.drop(columns=[\"station_id\"])\n",
-    "    dfDly = dfDly.drop(columns=[\"station_id\"])\n",
-    "\n",
-    "    agg_dfHly = aggregateHlyData(dfHly)\n",
-    "    agg_dfDly = aggregateDlyData(dfDly)\n",
-    "\n",
-    "    # merge on year month day district\n",
-    "    dfCombined = agg_dfHly.merge(agg_dfDly, on=[\"year\", \"month\", \"day\", \"district\"])\n",
-    "\n",
-    "    try:\n",
-    "        dfCombined.to_sql(\n",
-    "            TABLENAME, conn, schema=\"public\", if_exists=\"append\", index=False\n",
-    "        )\n",
-    "    except Exception as e:\n",
-    "        print(\"An error occurred while writing to the database {}\".format(e))\n",
-    "        raise e\n",
-    "\n",
-    "    db.cleanup()"
    ]
   },
   {
